--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -7,22 +7,118 @@
     <h1>Register</h1>
 
 
+<div class="modal fade" id="addAvoidModal" tabindex="-1" role="dialog" aria-labelledby="addAvoidModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="addAvoidModalLabel">Add an Ingredient to Avoid</h5>
+                <div id="flashedalert"></div>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class = "row round_hidden_div" style="padding-top: 2em">
+                {% from "_formhelpers.html" import render_field %}
+                    <form action="{{ url_for('auth.store_avoid') }}" class="form form-horizontal" method="POST" role="form" id="addAvoidForm">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                        {{ render_field(add_avoid_form.add_avoid_ingredient, cols="40", rows="1") }}
+                        {{ render_field(add_avoid_form.add_avoid_reason, cols="65", rows="4", maxlength=128) }}
+                        <p class = "text-muted">The information about why you avoid this ingredient is provided to your hosts to help them make decisions about what they will serve other guests.</p>
+                        <input type="submit" class="btn btn-sm btn-default" value="Submit">
+                        <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
+                            Close
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+         <script src="{{ url_for('static', filename = 'js/addAvoid-Register.js') }}" type="text/javascript"></script>
+    </div>
+</div>
+
+<div class="modal fade" id="updateAvoidModal" tabindex="-1" role="dialog" aria-labelledby="updateAvoidModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content" role="document">
+            <div class="modal-header">
+                <h5 class="modal-title" id="updateAvoidModalLabel">Update an Ingredient You Would Like To Avoid</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class = "row round_hidden_div" style="padding-top: 2em">
+
+
+                {% from "_formhelpers.html" import render_field %}
+                    <form action="{{ url_for('auth.update_stored_avoid') }}" class="form form-horizontal" method="POST" role="form" id="updateAvoidForm">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                        {{ render_field(update_avoid_form.update_avoid_ingredient, cols="40", rows="1") }}
+                        {{ render_field(update_avoid_form.update_avoid_reason, cols="65", rows="4", maxlength=128) }}
+                        <p class = "text-muted">The information about why you avoid this ingredient is provided to your hosts to help them make decisions about what they will serve other guests.</p>
+                        <input type="submit" class="btn btn-sm btn-success" value="Submit">&emsp;
+                        <button type="button" class="btn btn-sm btn-info" data-dismiss="modal" aria-label="Close">
+                            Cancel
+                        </button>&emsp;
+                        <button type="button" class="btn btn-sm btn-warning" id="deleteavoidreason">Delete the reason</button>
+                        <button type="button" class="btn btn-sm btn-danger" id="deleteavoid">Delete ingredient</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+     <script src="{{ url_for('static', filename = 'js/updateAvoid-register.js') }}" type="text/javascript"></script>
+</div>
+
+<div class="modal fade" id="intolModal" tabindex="-1" role="dialog" aria-labelledby="addIntolModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content" role="document">
+            <div class="modal-header">
+                <h5 class="modal-title" id="addIntolModalLabel">Change Allergy/Intolerance Groups</h5>
+                <div id="flashedalert"></div>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class = "row round_hidden_div" style="padding-top: 2em">
+                {% from "_formhelpers.html" import render_field %}
+                    <form action="{{ url_for('auth.store_intols') }}" class="form form-horizontal" method="POST" role="form" id="intolsForm">
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                        {{ render_field(intol_form.intolerances) }}
+                        <p class = "text-muted">Selecting the allergy/intolerance groups that apply to you can help make sure that KindTable recipes will be safe for you. For example, gluten can be found in many <a href="https://celiac.org/live-gluten-free/glutenfreediet/sources-of-gluten/" title="The Celiac Disease Foundation's list of sources of gluten" target="_blank">non-wheat ingredients</a> and if you select gluten, we will be sure that recipes will not include those ingredients. But if you are sensitive only to wheat itself and not ingredients such as soy sauce, selecting "wheat" instead of "gluten" gives you and your hosts more options.</p>
+                        <input type="submit" class="btn btn-sm btn-default" value="Submit">
+                        <button type="button" class="btn btn-sm btn-default" data-dismiss="modal" aria-label="Close">
+                            Close
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+         <script src="{{ url_for('static', filename = 'js/Intol-register.js') }}" type="text/javascript"></script>
+    </div>
+</div>
+
 <div class="row" style="padding-top: 3em">
-    <div class="col-md-4 col-md-offset-2">
+    <div class="col-md-3 col-md-offset-1">
         <div class = "row round_hidden_div">
             {% from "_formhelpers.html" import render_field %}
             <form class="form form-horizontal" method="post" role="form">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-            <dl>
-            {{ form.first_name.label }}<br>
-            {{ form.first_name(cols="40", rows="1", maxlength=64)}}
-            {{ form.last_name.label }}
-            {{ form.last_name(cols="40", rows="1", maxlength=64) }}<br>
-{{ form.diet.label }}&ensp;<a role="button" tabindex="0" data-container="body" data-toggle="popover" data-html='true' data-trigger="focus" data-placement="right" title="Diet definitions" data-content="<p>We ask for your diet so that the recipes work for you, too.
+            {{ render_field(form.first_name, cols="40", rows="1")  }}
+            {{ render_field(form.last_name, cols="40", rows="1")  }}
+            {{ render_field(form.email, cols="40", rows="1")  }}
+            {{ render_field(form.password)   }}
+            {{ render_field(form.password2)   }}
+        </div>
+    </div>
+
+    <div class="col-md-3">
+        <div class = "row round_hidden_div">
+            {{ form.diet.label }}&ensp;<a role="button" tabindex="0" data-container="body" data-toggle="popover" data-html='true' data-trigger="focus" data-placement="right" title="Diet definitions" data-content="<p>We ask for your diet so that the recipes work for you, too.
             Don't worry if your diet is actually more 
             complex than these terms, you will get to customize this more later. 
             (Also, you can change this information at any time.)</p>
-           
             {% for diet in diets %}
             <strong>{{  diet.diet_type  }}:</strong> {{  diet.description  }}<br>
             {% endfor %}</p>"><span class="glyphicon glyphicon-info-sign text-info"></span></a>
@@ -30,32 +126,27 @@
             {{ form.diet_reason.label}}&ensp;<a role="button" tabindex="0" data-container="body" data-toggle="popover" data-html='true' data-trigger="focus" data-placement="top" title="Reason you follow this diet" data-content="The diet reason field is optional, we show that information to your friends 
             so they can make better decisions about how to make you feel comfortable
             and welcome at their table."><span class="glyphicon glyphicon-info-sign text-info"></span></a>
-            {{ form.diet_reason(cols="55", rows="4", maxlength=128)  }}
-            {{ render_field(form.email, cols="40", rows="1")  }}
-            {{ render_field(form.password)   }}
-            {{ render_field(form.password2)   }}
-            </dl>
-            
-            <p><input type=submit class="btn btn-success" value=Register>
-            </form>
+            {{ form.diet_reason(cols="40", rows="4", maxlength=128)  }}
+          
         </div>
     </div>
 
     <div class="col-md-4">
         <div class = "row round_hidden_div" style="padding-top: 2em">
-            <h4>Diet you follow:</h4>
-            <p>We ask for your diet so that the recipes work for you, too.
-            Don't worry if your diet is actually more 
-            complex than these terms, you will get to customize this more later. 
-            (Also, you can change this information at any time.)</p>
-           
-            {% for diet in diets %}
-            <strong>{{  diet.diet_type  }}:</strong> {{  diet.description  }}<br>
-            {% endfor %}</p>
-            <h4>Reason you follow this diet:</h4>
-            <p>The diet reason field is optional, we show that information to your friends 
-            so they can make better decisions about how to make you feel comfortable
-            and welcome at their table.
+          
+                <h4>Allergies and Intolerances&ensp;<a role="button" tabindex="0" data-container="body" data-toggle="popover" data-html='true' data-trigger="focus" data-placement="left" title="Allergies/Intolerances" data-content="For example, gluten can be found in many <a href=https://celiac.org/live-gluten-free/glutenfreediet/sources-of-gluten/' title='The Celiac Disease Foundation's list of sources of gluten' target='_blank'>non-wheat ingredients</a> and if you select gluten, we will be sure that recipes will not include those ingredients. But if you are sensitive only to wheat itself and not ingredients such as soy sauce, selecting 'wheat' instead of 'gluten' gives you and your hosts more options."><span class="glyphicon glyphicon-info-sign text-info"></span></a></h4>
+                
+                <p class = "text-muted">Telling us about any allergy/intolerance groups that apply to you can help make sure that KindTable recipes will be safe for you. Do any of these apply to you? Dairy, egg, gluten, peanut, sesame, seafood, shellfish, soy, sulfites, tree nut, wheat.</p>
+                <p><button type="button" class="btn btn-primary" href="#" data-toggle="modal" data-target="#intolModal">Select Allergy/Intolerance groups</button>&ensp;<span class="intol-success"></span>
+
+             <h4 style="padding-top: 1em">Ingredients to Avoid</h4>
+
+             <p class = "text-muted">Are there any ingredients you would like to avoid eating?</p>
+             <p><button type="button" class="btn btn-primary" href="#" data-toggle="modal" data-target="#addAvoidModal">Add Ingredients to Avoid</button></p>
+
+            <input type=submit class="btn btn-success btn-lg" value=Register>
+        </form>
+
         </div>
     </div>
 </div>
