--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -12,7 +12,9 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="addAvoidModalLabel">Add an Ingredient to Avoid</h5>
-                <div id="flashedalert"></div>
+                <div id="alertbox" style="padding-top: 1em">
+                <div style="display: none" class="alert alert-success"  id="flashed_alert">
+                    <strong>Success!</strong> Would you like to add another ingredient?</div></div>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -53,8 +55,9 @@
                 {% from "_formhelpers.html" import render_field %}
                     <form action="{{ url_for('auth.update_stored_avoid') }}" class="form form-horizontal" method="POST" role="form" id="updateAvoidForm">
                         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                        {{ render_field(update_avoid_form.update_avoid_ingredient, cols="40", rows="1") }}
-                        {{ render_field(update_avoid_form.update_avoid_reason, cols="65", rows="4", maxlength=128) }}
+                        <input type="hidden" name="original_key" />
+                        {{ render_field(update_avoid_form.update_avoid_key, cols="40", rows="1") }}
+                        {{ render_field(update_avoid_form.update_avoid_value, cols="65", rows="4", maxlength=128) }}
                         <p class = "text-muted">The information about why you avoid this ingredient is provided to your hosts to help them make decisions about what they will serve other guests.</p>
                         <input type="submit" class="btn btn-sm btn-success" value="Submit">&emsp;
                         <button type="button" class="btn btn-sm btn-info" data-dismiss="modal" aria-label="Close">
@@ -131,20 +134,41 @@
         </div>
     </div>
 
+
+
+
+
+
+
+
+
     <div class="col-md-4">
         <div class = "row round_hidden_div" style="padding-top: 2em">
+
+
           
                 <h4>Allergies and Intolerances&ensp;<a role="button" tabindex="0" data-container="body" data-toggle="popover" data-html='true' data-trigger="focus" data-placement="left" title="Allergies/Intolerances" data-content="For example, gluten can be found in many <a href=https://celiac.org/live-gluten-free/glutenfreediet/sources-of-gluten/' title='The Celiac Disease Foundation's list of sources of gluten' target='_blank'>non-wheat ingredients</a> and if you select gluten, we will be sure that recipes will not include those ingredients. But if you are sensitive only to wheat itself and not ingredients such as soy sauce, selecting 'wheat' instead of 'gluten' gives you and your hosts more options."><span class="glyphicon glyphicon-info-sign text-info"></span></a></h4>
                 
                 <p class = "text-muted">Telling us about any allergy/intolerance groups that apply to you can help make sure that KindTable recipes will be safe for you. Do any of these apply to you? Dairy, egg, gluten, peanut, sesame, seafood, shellfish, soy, sulfites, tree nut, wheat.</p>
-                <p><button type="button" class="btn btn-primary" href="#" data-toggle="modal" data-target="#intolModal">Select Allergy/Intolerance groups</button>&ensp;<span class="intol-success"></span>
+                <p><button type="button" class="btn btn-primary" href="#" data-toggle="modal" data-target="#intolModal">Select Allergy/Intolerance groups</button>&ensp;<span style="display: none" class="alert alert-success glyphicon glyphicon-ok" id="intol-success"></span></p>
 
              <h4 style="padding-top: 1em">Ingredients to Avoid</h4>
 
-             <p class = "text-muted">Are there any ingredients you would like to avoid eating?</p>
-             <p><button type="button" class="btn btn-primary" href="#" data-toggle="modal" data-target="#addAvoidModal">Add Ingredients to Avoid</button></p>
+             {% if not session.avoid_dict %}<div hidden class="avoids"></div>{% else %}<div class="avoids"><div id="avoids">{% for key, value in session.avoid_dict.iteritems() %}<a role="button" type="button" data-toggle="modal" data-target="#updateAvoidModal" class="deleteAvoid" data-key="{{ key }}" data-value="{{ value }}"><span class="glyphicon glyphicon-pencil text-info" title="Edit this ingredient to avoid." aria-hidden="true"></span></a>&emsp;{{  key  }} - {{  value  }}<br>{% endfor %}</div></div>{% endif %}
 
-            <input type=submit class="btn btn-success btn-lg" value=Register>
+             <p class = "text-muted" style="padding-top: 1em">Are there any ingredients you would like to avoid eating?</p>
+             <p><button type="button" class="btn btn-primary" href="#" data-toggle="modal" data-target="#addAvoidModal">Add Ingredients to Avoid</button>&ensp;<span style="display: none" class="alert alert-success glyphicon glyphicon-ok" id="avoid-success"></span></p>
+
+            <div class="row"
+                <div class="col">
+                    <a href="/auth/clear" role="button" title="Removes everything you have added to your profile, for a fresh start" class="btn btn-xs btn-warning pull-right">start over</a>
+                </div>
+                <div class="col">
+                    <input type=submit class="btn btn-success btn-lg pull" value=Register>
+                </div>
+
+            </div>
+
         </form>
 
         </div>
