--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,6 +43,15 @@
         </div>
     </div>
 
+    <div class="modal fade" id="addPartyModal" tabindex="-1" role="dialog" aria-labelledby="addPartyModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content" id="addPartyModal">
+                
+            </div>
+            <script src="{{ url_for('static', filename = 'js/addParty.js') }}" type="text/javascript"></script>  
+        </div>
+    </div>
+
 
 
 
@@ -99,7 +108,7 @@
                             {% else %}
                             {% endif %}
                             <li role="separator" class="divider"></li>
-                            <li><a href="/addaparty">Create a party</a></li>
+                            <li><a data-toggle="modal" id="addPartyLink" data-target="#addPartyModal">Create a party</a></li>
                         </ul>
                     </li>
                 </ul>    
